# PG

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.MD
include/: CMakeLists.txt
include/libVector/: vector.hpp
include/pointlib/: point.hpp
libs/: CMakeLists.txt
libs/Prism/: CMakeLists.txt
libs/Prism/include/: Prism.hpp
libs/Prism/include/Prism/: camera.hpp  matrix.hpp  objects.hpp  point.hpp  ray.hpp  utils.hpp  vector.hpp
libs/Prism/src/: camera.cpp  point.cpp  ray.cpp  utils.cpp  vector.cpp
src/: CMakeLists.txt  main.cpp
src/libVector/: vector.cpp
src/pointlib/: point.cpp
tests/: CMakeLists.txt  Matrix.cpp  Point3.cpp  TestHelpers.hpp  Utils.cpp  Vector3.cpp  VectorTest.hpp  camera.cpp  libVector.hpp  ray.cpp  utils.cpp  utils.hpp
